Fixed menu overflow issue / updated all.css

--- a/unstable/nms_root/nms/static/css/all.css
+++ b/unstable/nms_root/nms/static/css/all.css
@@ -130,7 +130,9 @@ footer{
 .links .ico5 {
 	background:#fff url(../images/login.png) no-repeat 10px;
 }
-.profile-box {float:right;}
+.profile-box {
+	float:right;
+}
 .btn-on {
 	background:url(../images/sprite.png) no-repeat -230px -5px;
 	width:35px;
@@ -189,8 +191,7 @@ footer{
 .tabs .text-section {
 	background:#f9f9f9;
 	padding:19px 0 8px 36px;
-	margin:0 0 1px;
-	z-index:999;
+	margin:0 0 75px;
 }
 .tabs h1 {
 	font-size:18px;
